made the site static

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="shortcut icon" href="/icon.png" />
     <title>noter</title>
+    <script type="module" crossorigin src="/assets/index.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index.css">
   </head>
   <body>
     <nav>
@@ -24,7 +26,6 @@
       </div>
       <textarea name="" id=""></textarea>
     </dialog>
-    <script type="module" src="/src/main.ts"></script>
-    <script async src="/src/pwa.js"></script>
+    <script async src="/assets/pwa.js"></script>
   </body>
 </html>
