--- a/old/index.html
+++ b/old/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="./manifest.json" />
-    <link rel="shortcut icon" href="./icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="shortcut icon" href="/icon.png" />
     <title>noter</title>
-    <script type="module" crossorigin src="./assets/index.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/index.css">
   </head>
   <body>
     <nav>
@@ -26,6 +24,7 @@
       </div>
       <textarea name="" id=""></textarea>
     </dialog>
-    <script async src="./assets/pwa.js"></script>
+    <script type="module" src="/src/main.ts"></script>
+    <script async src="/src/pwa.js"></script>
   </body>
 </html>
